--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "chalk": "^3.0.0"
+        "chalk": "^3.0.0",
+        "minimist": "^1.2.0"
     }
 }
