--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-    "name": "rebase-master",
-    "version": "2.3.5",
+    "name": "git-rebase-branch",
+    "version": "3.0.0",
     "description": "",
     "main": "index.js",
+    "env": {
+        "es6": true,
+        "node": true,
+        "jest": true,
+        "jasmine": true
+    },
     "bin": {
-        "rebase-master": "./index.js"
+        "git-rebase-branch": "./index.js"
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,7 +18,14 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "chalk": "^3.0.0",
-        "minimist": "^1.2.0"
+        "chalk": "^4.1.1",
+        "minimist": "^1.2.0",
+        "prettier-eslint": "^12.0.0"
+    },
+    "devDependencies": {
+        "eslint": "^7.30.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-prettier": "^3.4.0",
+        "prettier": "2.3.2"
     }
 }
