--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "rebase-branches",
-    "version": "1.0.1",
+    "version": "1.4.0",
     "description": "",
     "main": "index.js",
     "env": {
@@ -19,6 +19,7 @@
     "license": "ISC",
     "dependencies": {
         "chalk": "^4.1.1",
+        "lodash": "^4.17.21",
         "minimist": "^1.2.0",
         "prettier-eslint": "^12.0.0"
     },
